Re-add bottom margin to avoid covering bottom atmospheres/tracks.

--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -24,6 +24,7 @@
     &--bottom-border::after {
         content: '';
         margin-left: calc(17%);
+        margin-bottom: 5.5rem;  /* necessary so sidebar footer doesn't cover bottom atmospheres/tracks */
         display: block;
         width: 66%;
         height: 0px;
